<resources>
    <string name="app_name">Clean Me</string>

    <string name="welcome_intro_title">Welcome to Clean Me</string>
    <string name="welcome_intro_text">Clean Me will help you remember to clean your device regularly.</string>
    <string name="welcome_track_use_title">Tracking device use time</string>
    <string name="welcome_track_use_text">Clean Me keeps track of the time while you are using the device. Use time starts when your device screen turns on and stops when the screen turns off.</string>
    <string name="welcome_clean_reminder_title">Clean reminder</string>
    <string name="welcome_clean_reminder_text">You will be reminded to clean your device after 2 hours of use. You can change the clean interval in the settings.</string>
    <string name="welcome_clean_and_reset_title">Clean device and reset</string>
    <string name="welcome_clean_and_reset_text">Clean your device and click the \"clean now\" button to reset the timer.</string>
    <string name="welcome_overlay_title">Particle overlay</string>
    <string name="welcome_overlay_text">Clean Me can display an overlay on top of all apps that fills up with particles over time to remind you that your device screen gets dirty by using it. The overlay is off by default. You can turn it on in the settings.</string>
    <string name="welcome_button_done">Done</string>
    <string name="welcome_button_skip">Skip</string>

    <string name="main_label_time_until_clean">use time remaining until clean reminder</string>
    <string name="main_label_time_since_interval">use time since clean reminder</string>
    <string name="main_button_clean_reset">Clean now</string>
    <string name="main_menu_about">About</string>

    <string name="settings_title">Settings</string>
    <string name="settings_section_title_general">General</string>
    <string name="settings_switch_label_track_device_usage">Track device use time</string>
    <string name="settings_description_track_device_usage">Clean Me needs to track the device use time (screen-on-time) to remind you when it is time to clean the device</string>
    <string name="settings_switch_label_start_on_boot">Start on device boot</string>
    <string name="settings_description_start_on_boot">Automatically start the CleanMe app when the device boots up</string>
    <string name="settings_section_title_reminder">Clean Reminder</string>
    <string name="settings_label_clean_interval">Remind me to clean my device after %s of use</string>
    <plurals name="settings_label_clean_interval_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="settings_label_clean_interval_and"> and</string>
    <plurals name="settings_label_clean_interval_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="settings_button_edit_clean_interval">edit clean reminder interval</string>
    <string name="settings_section_title_overlay">Particle Overlay</string>
    <string name="settings_description_overlay_not_supported">The particle overlay feature is not supported on Android 12 or later.\n\nSince Android 12 all input is blocked if an overlay window is displayed above other apps. This new operating system behavior renders the particle overlay unusable.</string>
    <string name="settings_switch_enable_overlay_label">Show particle screen overlay</string>
    <string name="settings_description_enable_overlay">The overlay displays an ever increasing number of grime particles on the screen on top all application over time</string>
    <string name="settings_label_max_particles">Maximum number of overlay particles: %d</string>
    <string name="settings_slider_description_max_particles">slider maximum particle count</string>
    <string name="settings_description_max_particles">The maximum number of overlay grime particles to show at time of maximum dirtiness (time to clean)</string>
    <string name="settings_label_particle_size">Overlay particle size: %d</string>
    <string name="settings_slider_description_particle_size">slider particle size</string>
    <string name="settings_description_particle_size">Adjusts the size of the overlay particles</string>
    <string name="settings_label_particle_transparency">Particle transparency: %d%%</string>
    <string name="settings_slider_description_particle_transparency">slider particle transparency</string>
    <string name="settings_description_particle_transparency">Adjusts the transparency of the overlay particles</string>
    <string name="settings_label_particle_growth_model">Growth model for particle count</string>
    <string name="settings_description_particle_growth_model">Adjusts how particles are added to the overlay over time</string>
    <string name="settings_button_overlay_growth_model_linear">Linear</string>
    <string name="settings_button_overlay_growth_model_exponential">Exponential</string>
    <string name="settings_dialog_overlay_permission_info_title">Overlay Permission</string>
    <string name="settings_dialog_overlay_permission_info_message">Clean Me requires permission by the system to display the particle overlay on top of all applications. You can give this permission in the system settings.</string>
    <string name="settings_dialog_overlay_permission_info_open_settings_button">open system settings</string>

    <string name="about_title">About</string>
    <string name="about_description_app_icon">app icon</string>
    <string name="about_description_logo">Bretscher Hochstrasser logo</string>
    <string name="about_label_developed_by">developed by:</string>
    <string name="about_button_share">Share</string>
    <string name="about_button_feedback">Feedback</string>
    <string name="about_button_replay_welcome">Show app intro again</string>
    <string name="about_share_subject">Clean Me App</string>
    <string name="about_share_text">Check out the Clean Me App on Google Play: %s</string>
    <string name="about_share_chooser_title">Share app link</string>
    <string name="about_menu_3rd_party_licenses">3rd party licenses</string>
    <string name="about_feedback_choose_email_app">Send email with</string>
    <string name="about_feedback_no_email_app">No email app found</string>
    <string name="about_feedback_subject">Clean Me App - Feedback</string>

    <string name="notification_channel_name_service">Service notifications</string>
    <string name="notification_channel_name_reminder">Reminder notifications</string>
    <string name="notification_service_title">Clean Me is running</string>
    <string name="notification_service_text_time_until_clean">Use time until next clean: %s</string>
    <string name="notification_service_text_time_since_interval">Use time since clean reminder: %s</string>
    <string name="notification_service_action_hide_overlay">Hide overlay</string>
    <string name="notification_service_action_show_overlay">Show overlay</string>
    <string name="notification_service_action_settings">Settings</string>
    <string name="notification_reminder_title">Time to clean!</string>
    <string name="notification_reminder_text">This is your reminder to clean your device.</string>

</resources>
